--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+  <%- include("./partials/head.ejs") %>
   <body>
+    <%- include("./partials/nav.ejs")%>
     <div id="new-body">
       <h1>New Animal Form</h1>
       <form action="/animals" method="post" id="newform">
@@ -21,7 +18,7 @@
         <label for="extinct">Is animal extinct?</label>
         <input type="checkbox" name="extinct" /><br />
 
-        <input type="submit" value="Add book to the list" />
+        <input type="submit" value="Add animal to the list" />
       </form>
     </div>
   </body>
