--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+  <%- include("./partials/head.ejs") %>
   <body>
-    <h1>Booklist Index</h1>
+    <%- include("./partials/nav.ejs")%>
+    <h1>Animals list Index</h1>
     <p>click title to see more</p>
 
     <div class="animal-container">
