--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+  <%- include("./partials/head.ejs") %>
   <body>
+    <%- include("./partials/nav.ejs")%>
     <h1>Show Page</h1>
     <h2><%=animal.location%></h2>
     <a href="/animals/edit/<%=animal._id%>">Edit</a>
     <h3><%=animal.spieces%></h3>
-    <p><%=animal.extinct ? "I read this":"Still on the list"%></p>
+    <p>
+      <%=animal.extinct ? "The animal is extinct":"The animal is not extinct"%>
+    </p>
   </body>
 </html>
