--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,8 +6,8 @@
     <div id="new-body">
       <h1>New Animal Form</h1>
       <form action="/animals" method="post" id="newform">
-        <label for="spieces">Spieces</label>
-        <input type="text" name="spieces" /><br />
+        <label for="species">Species</label>
+        <input type="text" name="species" /><br />
 
         <label for="location">Location</label>
         <input type="text" name="location" /> <br />
